Fixed error with sections cutoff by navbar, V3

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body{
   width: 100%;
   font-family: 'Poppins', sans-serif;
   background-color: black;
-  padding-top: 65px; 
+  scroll-padding-top: 155px; 
 }
 
 .center {
@@ -48,22 +48,21 @@ html, body{
 }
 
 .storefront:before {
-  height: 104px;
+  height: 154px;
   content: "";
   display:block;
 }
 
 .storefront{
-    /* padding-top: 2rem; */
-    /* padding-bottom: 2rem; */
+    padding-top: 0rem;
+    padding-bottom: 0rem;
 }
 
 .storefront-img{
-    border: 5px solid #cc9a33;
+    border: 4px solid #cc9a33;
 }
 
 .menu:before {
-  height: 104px;
   content: "";
   display:block;
 }
